style.css
/* ... */
/* Home icons */
.home .icon:before {
  font-family: 'untitled-font-2';
  position: absolute;
  margin-left: -100px;
  font-size: 70px;
}

.home .analytics:before {
  content: "y";
}

.home .binary:before {
  content: "G";
}

.home .chat:before {
  content: "M";
}

.home .collab:before {
  content: "J";
}

/* Footer stuff */
footer {
  font-size: 11px;
  margin: 20px;
  vertical-align: middle;
}

footer .footer-left {
  float: left;
}

footer .footer-right {
  float: right;
}

.footer-right #a8c-image {
  float: right;
  margin-left: 5px;
  width: 20px;
  height: 20px;
  background-size: cover;
  background-image: url('imgs/a8c.png');
}

#menu-item-43 {
  display: none;
}

@media screen and (min-width: 900px) {
  #menu-item-43 {
    display: block;
    float: right;
    padding: 0;
    margin: 15px 0 0 0;
  }
  
  #menu-item-43 a {
    display: inline-block;
    background: rgb(219, 122, 238);
    border: 0;
    padding: 4px 12px;
    vertical-align: middle;
    border-radius: 12px;
    color: #fff;
    font-size: 12px;
    font-weight: bold;
    color: #fff;
  }
}

/* Blog stuff */
body.archive {
  max-width: 800px;
}

body.single {
  max-width: 800px;
}

/* Codes */
pre {
  padding: 0.3em;
  padding-left: 0.8em;
  border-left: 0.5em solid #D8D8D8;
  background: white;
}

pre code {
  color: rgb(119, 119, 119);
  font-weight: lighter;
  font-size: 13px;
}

